dont force ssl passthrough

--- a/deployments/web1.yaml
+++ b/deployments/web1.yaml
@@ -36,7 +36,7 @@ metadata:
   #namespace: argodeploy
   annotations:
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
    ingressClassName: nginx
    rules:
